Added latest stuff.

--- a/src/app/components/home/person-table/person-table.component.html
+++ b/src/app/components/home/person-table/person-table.component.html
@@ -1,3 +1,7 @@
 <div class="person-table">
   <p>person-table works!</p>
+
+  <button mat-raised-button color="primary" (click)="onClickEditPerson()">
+    Edit Person
+  </button>
 </div>
