--- a/src/app/components/home/person-table/person-table.component.scss
+++ b/src/app/components/home/person-table/person-table.component.scss
@@ -1,4 +1,5 @@
 .person-table {
-  background-color: rgb(240, 241, 176);
+  background-color: rgb(148, 233, 229);
   height: 5rem;
+  padding: 1rem;
 }
